Cleanup Connect Module (2/n)