@@ -33,14 +33,11 @@ import org.junit.jupiter.api.Test;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import static java.util.Collections.singletonList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 
@@ -80,8 +77,8 @@ public class MaskFieldTest {
         VALUES.put("date", new Date());
         VALUES.put("bigint", new BigInteger("42"));
         VALUES.put("bigdec", new BigDecimal("42.0"));
-        VALUES.put("list", singletonList(42));
-        VALUES.put("map", Collections.singletonMap("key", "value"));
+        VALUES.put("list", List.of(42));
+        VALUES.put("map", Map.of("key", "value"));
 
         VALUES_WITH_SCHEMA.put("magic", 42);
         VALUES_WITH_SCHEMA.put("bool", true);
@@ -96,8 +93,8 @@ public class MaskFieldTest {
         VALUES_WITH_SCHEMA.put("time", new Date());
         VALUES_WITH_SCHEMA.put("timestamp", new Date());
         VALUES_WITH_SCHEMA.put("decimal", new BigDecimal(42));
-        VALUES_WITH_SCHEMA.put("array", Arrays.asList(1, 2, 3));
-        VALUES_WITH_SCHEMA.put("map", Collections.singletonMap("what", "what"));
+        VALUES_WITH_SCHEMA.put("array", List.of(1, 2, 3));
+        VALUES_WITH_SCHEMA.put("map", Map.of("what", "what"));
         VALUES_WITH_SCHEMA.put("withDefault", null);
     }
 
@@ -117,12 +114,12 @@ public class MaskFieldTest {
 
     private static void checkReplacementWithSchema(String maskField, Object replacement) {
         SinkRecord record = record(SCHEMA, VALUES_WITH_SCHEMA);
-        final Struct updatedValue = (Struct) transform(singletonList(maskField), String.valueOf(replacement)).apply(record).value();
+        final Struct updatedValue = (Struct) transform(List.of(maskField), String.valueOf(replacement)).apply(record).value();
         assertEquals(replacement, updatedValue.get(maskField), "Invalid replacement for " + maskField + " value");
     }
 
     private static void checkReplacementSchemaless(String maskField, Object replacement) {
-        checkReplacementSchemaless(singletonList(maskField), replacement);
+        checkReplacementSchemaless(List.of(maskField), replacement);
     }
 
     @SuppressWarnings("unchecked")
@@ -154,8 +151,8 @@ public class MaskFieldTest {
         assertEquals(new Date(0), updatedValue.get("date"));
         assertEquals(BigInteger.ZERO, updatedValue.get("bigint"));
         assertEquals(BigDecimal.ZERO, updatedValue.get("bigdec"));
-        assertEquals(Collections.emptyList(), updatedValue.get("list"));
-        assertEquals(Collections.emptyMap(), updatedValue.get("map"));
+        assertEquals(List.of(), updatedValue.get("list"));
+        assertEquals(Map.of(), updatedValue.get("map"));
     }
 
     @Test
@@ -182,8 +179,8 @@ public class MaskFieldTest {
         assertEquals(new Date(0), updatedValue.get("time"));
         assertEquals(new Date(0), updatedValue.get("timestamp"));
         assertEquals(BigDecimal.ZERO, updatedValue.get("decimal"));
-        assertEquals(Collections.emptyList(), updatedValue.get("array"));
-        assertEquals(Collections.emptyMap(), updatedValue.get("map"));
+        assertEquals(List.of(), updatedValue.get("array"));
+        assertEquals(Map.of(), updatedValue.get("map"));
         assertEquals(null, updatedValue.getWithoutDefault("withDefault"));
     }
 
@@ -206,10 +203,10 @@ public class MaskFieldTest {
         Class<DataException> exClass = DataException.class;
 
         assertThrows(exClass, () -> checkReplacementSchemaless("date", new Date()), exMessage);
-        assertThrows(exClass, () -> checkReplacementSchemaless(Arrays.asList("int", "date"), new Date()), exMessage);
+        assertThrows(exClass, () -> checkReplacementSchemaless(List.of("int", "date"), new Date()), exMessage);
         assertThrows(exClass, () -> checkReplacementSchemaless("bool", false), exMessage);
-        assertThrows(exClass, () -> checkReplacementSchemaless("list", singletonList("123")), exMessage);
-        assertThrows(exClass, () -> checkReplacementSchemaless("map", Collections.singletonMap("123", "321")), exMessage);
+        assertThrows(exClass, () -> checkReplacementSchemaless("list", List.of("123")), exMessage);
+        assertThrows(exClass, () -> checkReplacementSchemaless("map", Map.of("123", "321")), exMessage);
     }
 
     @Test
@@ -231,7 +228,7 @@ public class MaskFieldTest {
 
         assertThrows(exClass, () -> checkReplacementWithSchema("time", new Date()), exMessage);
         assertThrows(exClass, () -> checkReplacementWithSchema("timestamp", new Date()), exMessage);
-        assertThrows(exClass, () -> checkReplacementWithSchema("array", singletonList(123)), exMessage);
+        assertThrows(exClass, () -> checkReplacementWithSchema("array", List.of(123)), exMessage);
     }
 
     @Test
@@ -249,7 +246,7 @@ public class MaskFieldTest {
         assertThrows(exClass, () -> checkReplacementSchemaless("bigdec", "foo"), exMessage);
         assertThrows(exClass, () -> checkReplacementSchemaless("int", new Date()), exMessage);
         assertThrows(exClass, () -> checkReplacementSchemaless("int", new Object()), exMessage);
-        assertThrows(exClass, () -> checkReplacementSchemaless(Arrays.asList("string", "int"), "foo"), exMessage);
+        assertThrows(exClass, () -> checkReplacementSchemaless(List.of("string", "int"), "foo"), exMessage);
     }
 
     @Test
@@ -259,17 +256,17 @@ public class MaskFieldTest {
 
     @Test
     public void testNullListAndMapReplacementsAreMutable() {
-        final List<String> maskFields = Arrays.asList("array", "map");
+        final List<String> maskFields = List.of("array", "map");
         final Struct updatedValue = (Struct) transform(maskFields, null).apply(record(SCHEMA, VALUES_WITH_SCHEMA)).value();
         @SuppressWarnings("unchecked") List<Integer> actualList = (List<Integer>) updatedValue.get("array");
-        assertEquals(Collections.emptyList(), actualList);
+        assertEquals(List.of(), actualList);
         actualList.add(0);
-        assertEquals(Collections.singletonList(0), actualList);
+        assertEquals(List.of(0), actualList);
 
         @SuppressWarnings("unchecked") Map<String, String> actualMap = (Map<String, String>) updatedValue.get("map");
-        assertEquals(Collections.emptyMap(), actualMap);
+        assertEquals(Map.of(), actualMap);
         actualMap.put("k", "v");
-        assertEquals(Collections.singletonMap("k", "v"), actualMap);
+        assertEquals(Map.of("k", "v"), actualMap);
     }
 
     @Test
